--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" type="text/css" href="{% static "js/jquery-ui.theme.min.css" %}">
 	<link rel="stylesheet" type="text/css" href="{% static "css/imd-styles.css" %}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
 </head>
 <body>
