--- a/templates/index.html
+++ b/templates/index.html
@@ -5,54 +5,34 @@
 <div class="jumbotron">
 	<div class="imdindexlogo">
 		<img src=" {% static "images/logo-white.png" %} " class="imdlogo">
-	</div>
-	
-</div>
-<div class="slogan">
-	<div class="row" id=>
-		<div class="col-md-3">
-			<h2><span class="bracket">[</span> Design,</h2>
-		</div>
-		<div class="col-md-3">
-			<h2>Print,</h2>
-		</div>
-		<div class="col-md-3">
-			<h2>and</h2>
-		</div>
-		<div class="col-md-3">
-			<h2>Web <span class="bracket">]</span></h2>
-		</div>
-	</div>
-	
+        <img src=" {% static "images/design-print-web.png" %} " class="imdlogo">
+    </div>
 </div>
 {% endblock %}
 {% block title %}{% endblock %}
 {% block content %}
-
-	<div class="row" id="about">
-		<div class="col-md-10 col-md-offset-1 col-sm-12">
-			<h1 class="titles"><span class="fa fa-angle-right fa-2x arrow-red-bg"></span> ABOUT</h1>
-			<p>IMD is an agile team of artist, designers, developers, doers, go getters and overall awesome people. We love to build brands, take beautiful photos, construct unique websites and print amazing things with a passion for creating exceptional work for exceptional clients. We are the creators of creativity, the ones who build bridges and tear down walls, all in the pursuit of design immortality.</p>
+<div class="container-fluid">
+    <div class="row color-red">
+		<div class="col-md-5 col-lg-5 col-md-offset-1 col-sm-12 top-padding bottom-padding">
+			<h1 class="oswald-medium border-bottom-dashed">ABOUT</h1>
+			<p class="text-white">IMD is an agile team of artist, designers, developers, doers, go getters and overall awesome people. We love to build brands, take beautiful photos, construct unique websites and print amazing things with a passion for creating exceptional work for exceptional clients. We are the creators of creativity, the ones who build bridges and tear down walls, all in the pursuit of design immortality.</p>
 		</div>
+        <div class="col-lg-6 col-md-6 isais-pic">
+        </div>
 	</div>
-	<div class="row">
-		<div class="col-md-10 col-md-offset-1 col-sm-12">
-			
-			<div class="row">
-				{% if category %}
-				<div class="col-md-12">
-				{% for cat in category %}
-					<div class="col-md-6">
-						<h2 class="cat-title"><span class="arrow-wht-bg fa fa-angle-right fa-2x"></span> {{ cat.name }}</h2>
-						<p>{{ cat.desc }}</p>	
-					</div>
-					
-				{% endfor %}
-				
-				</div>
-				{% endif %}
-			</div>
-		</div>
+    <div class="row">
+        <div class="col-md-2 col-md-offset-1">
+            <h1 class="border-bottom-dashed oswald-medium">Vehicle Wraps</h1>
+            <p class="text-gray">A wrap is a large vinyl graphic or decal thats applied directly over the original paint of the vehicle. The application of the wrap allows you to change the vehicles appearance in a very short period of time and in turn allows you to remove the wrap, returning the vehicle back to its original condition if necessary.</p>
+        </div>
+        <div class="col-md-5">
+            <h1 class="border-bottom-dashed oswald-medium">Protecting You Paint</h1>
+            <p class="text-gray">Your vehicles will inevitably show the signs of clocking up miles on Britain’s motorways. By wrapping your vehicle you can not only enhance your brand, you can also protect your paintwork. We always use matching protective over-laminate with our vehicle wraps, which extends their life and look as well as protecting your paintwork from stone chips and minor abrasions.</p>
+        </div>
+    </div>
+    <div class="row rick-pic">
+    </div>
+    <div class="row">
 		<div class="col-md-12 brands">
 			<img src="{% static "images/3m.png" %}" class="brands-used">
 			<img src="{% static "images/oracal.png" %}" class="brands-used">
@@ -61,28 +41,9 @@
 			<img src="{% static "images/avery.png" %}" class="brands-used">
 		</div>
 	</div>
-		<div class="col-md-12 col-sm-12" id="types-of-wrap">
-			<div class="row">
-				<div class="col-md-2 col-md-offset-2 col-sm-12 wrap-type partial-w">
-					<h2>Partial</h2>
-					<hr class="dashed-hr">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet placerat sem. Mauris at enim turpis. Integer tempus erat vel purus rhoncus, at sagittis metus placerat. Sed ullamcorper tortor non nulla elementum pharetra.</p>
-					<div class="wrap-button"><a href="{%  url 'vehicle_wraps' %}#partial " class="btn btn-vw white">Learn More</a></div>
-				</div>
-				<div class="col-md-2 col-md-offset-1 col-sm-12 wrap-type full-w">
-					<h2>Full</h2>
-					<hr class="dashed-hr-wht">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet placerat sem. Mauris at enim turpis.  </p>
-					<div class="wrap-button"><a href="{%  url 'vehicle_wraps' %}#full " class="btn btn-vw">Learn More</a></div>
-				</div>
-				<div class="col-md-2 col-md-offset-1 col-sm-12 wrap-type change-w">
-					<h2>Color Change</h2>
-					<hr class="dashed-hr-wht">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet placerat sem. Mauris at enim turpis. Integer tempus erat vel purus rhoncus, at sagittis metus placerat. Sed ullamcorper tortor non nulla elementum pharetra. Vestibulum laoreet neque.</p>
-					<div class="wrap-button"><a href="{%  url 'vehicle_wraps' %}#color " class="btn btn-vw">Learn More</a></div>
-				</div>
-			</div>
-		</div>
+    <div class="row">
+        
+    </div>
 		<!-- <div class="col-md-10 col-md-offset-1 col-sm-12">
 			<h1>Portfolio</h1>
 			{% if gallery %}
